--- a/doc/PUTeX-dev.tex
+++ b/doc/PUTeX-dev.tex
@@ -25,4 +25,37 @@ Omega/Aleph不采用native-font，引入了OFM，DBCS。
 在TeX中，需要进行设定字体的渲染模式。
 在TeX中，需要实现割注（warichu）的算法。
 在TeX中，需要实现圈点的算法。
+
+<<
+  /Type/Font
+  /Subtype/CIDFontType2
+  /BaseFont/WBTMRR+SimSun
+  /FontDescriptor 14 0 R
+  /CIDSystemInfo
+  <<
+    /Registry(Adobe)
+    /Ordering(GB1)
+    /Supplement 5
+  >>
+  /DW 1000
+>>
+
+<<
+  /Type/FontDescriptor
+  /Ascent 859
+  /Descent -141
+  /StemV 87
+  /CapHeight 859
+  /AvgWidth 500
+  /FontBBox [-8 -145 1000 859]
+  /ItalicAngle 0
+  /Flags 6
+  /Style
+  <<
+    /Panose<000002010600030101010101>
+  >>
+  /FontName/WBTMRR+SimSun
+  /FontFile2 15 0 R
+  /CIDSet 16 0 R
+>>
 \bye
